# MosqOps

./: &1  .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.carrier  Dockerfile.carrier.acr  LICENSE  README.md  SECURITY.md  build-carrier.ps1  build.rs  build_final.bat  build_out2.txt  build_out3.txt  build_plugin.bat  build_proper.bat  cargo_err.txt  compile.bat  test.conf  tree.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-carrier-image.yml
docs/: API.md
mosquitto-plugin-local/: .cargo_vcs_info.json  Cargo.toml  build.rs
mosquitto-plugin-local/src/: lib.rs  mosquitto_calls.rs
src/: api.rs  dynsec.rs  lib.rs  logwatch.rs
