[package]
name = "mosqops"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
mosquitto-plugin = { path = "../mosquitto-plugin-local" }
tokio = { version = "1.37", features = ["full", "rt-multi-thread"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rumqttc = "0.24.0"
uuid = { version = "1.8", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
