[package]
name = "mosqops"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
once_cell = "1.21"
chrono = { version = "0.4", features = ["serde"] }
mosquitto-plugin = { path = "mosquitto-plugin-local" }
tokio = { version = "1.51", features = ["full", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
futures-util = "0.3"
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rumqttc = { version = "0.25.1", default-features = false, features = ["use-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
uuid = { version = "1.23", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
pbkdf2 = { version = "0.12", features = ["sha2", "password-hash"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
rand = "0.10.0"
